commented out code needed only on google colab

--- a/Final Project/Hukkeri_Final_Project.ipynb
+++ b/Final Project/Hukkeri_Final_Project.ipynb
@@ -79,9 +79,9 @@
         }
       ],
       "source": [
-        "import os\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "# import os\n",
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive')"
       ]
     },
     {
@@ -92,8 +92,8 @@
       },
       "outputs": [],
       "source": [
-        "import sys\n",
-        "sys.path.append('/content/drive/My Drive/Colab-Notebooks/DH140/')"
+        "# import sys\n",
+        "# sys.path.append('/content/drive/My Drive/Colab-Notebooks/DH140/')"
       ]
     },
     {
@@ -118,7 +118,7 @@
       "outputs": [],
       "source": [
         "# load dataset in Google\n",
-        "df = pd.read_csv('/content/drive/MyDrive/Colab-Notebooks/DH140/intelligent_people.csv')"
+        "# df = pd.read_csv('/content/drive/MyDrive/Colab-Notebooks/DH140/intelligent_people.csv')"
       ]
     },
     {
@@ -130,7 +130,7 @@
       "outputs": [],
       "source": [
         "# load dataset locally\n",
-        "# df = pd.read_csv('intelligent_people.csv')"
+        "df = pd.read_csv('intelligent_people.csv')"
       ]
     },
     {
