removed title & name from notebook

--- a/Blog/posts/Hukkeri_Final_Project.ipynb
+++ b/Blog/posts/Hukkeri_Final_Project.ipynb
@@ -2,14 +2,15 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "0npWzMI70p1q"
-      },
+      "metadata": {},
       "source": [
-        "# Intelligent Individuals\n",
-        "\n",
-        "Shivani Hukkeri<br>\n",
-        "August 2, 2024\n"
+        "---\n",
+        "title: \"Brilliant Minds\"\n",
+        "description: \"Glimpse into some of the world's greatest minds\"\n",
+        "author: \"Shivani Hukkeri\"\n",
+        "date: \"07/31/2024\"\n",
+        "date-modified: \"07/31/2024\"\n",
+        "---"
       ]
     },
     {
