reformatted writing to look better on blog

--- a/Blog/posts/Hukkeri_Final_Project.ipynb
+++ b/Blog/posts/Hukkeri_Final_Project.ipynb
@@ -31,19 +31,18 @@
         "id": "R2ris01ea7ru"
       },
       "source": [
-        "The dataset title “Top Intelligent People in the World” offers an interesting glimpse into the academic lives and achievements of some of the most intellectually gifted individuals across the globe. This dataset provides detailed records of 5,000 leading minds on various aspects including their names, professions, contributions, and IQ scores. This project aims to ascertain how the educational background of some of the world’s most intelligent people influenced their fields of expertise and the types of achievements they attained while also exploring other motivations.\n",
-        "<br>\n",
-        "<br>\n",
-        "I was also particularly interested in understanding how we could characterize intelligence in addition to quantitative measures such as IQ, and what different factors could contribute to high intelligence. Such factors could include education, environment, personal interests, and more. This dataset includes individuals from the year 1900 to 2000, which offers us the opportunity to explore how different cultures and time periods have cultivated intelligence. We can further explore how historical and cultural factors influenced intelligence and the achievements brought forth by the recorded individuals. Since the dataset includes both male and female individuals, we can further analyze how historical perspectives coupled with educational opportunities offered affected the intelligence/contributions of women compared to men. The dataset further includes the individuals’ country of origin, which can shed light on the educational resources available in each country and how these resources may have impacted the number of highly intelligent individuals it produced or the types of achievements they attained.\n",
-        "<br>\n",
-        "<br>\n",
-        "Amongst the above motivations that drive my exploration of this dataset, below are some of the questions that I seek to address:\n",
-        "- Which fields of expertise do the most intelligent people excel in? Are there certain professions or areas of study that attract high IQ individuals more than others?\n",
-        "- How has the recognition and distribution of high intelligence changed over time? Are there historical periods that produced more recognized geniuses?\n",
-        "- Is there a correlation between IQ scores and the level of achievement or impact these individuals have had in their respective fields?\n",
-        "- What are the demographic patterns amongst the top intelligent people? Are there commonalities in age, gender, nationality, or educational background?\n",
-        "- What environmental factors (e.g. socioeconomic status, educational background, cultural influences, etc) are common amongst these individuals? How do these factors influence the development of high intelligence?<br>\n",
-        "<br>\n",
+        "<p>The dataset title “Top Intelligent People in the World” offers an interesting glimpse into the academic lives and achievements of some of the most intellectually gifted individuals across the globe. This dataset provides detailed records of 5,000 leading minds on various aspects including their names, professions, contributions, and IQ scores. This project aims to ascertain how the educational background of some of the world’s most intelligent people influenced their fields of expertise and the types of achievements they attained while also exploring other motivations.</p>\n",
+        "\n",
+        "<p>I was also particularly interested in understanding how we could characterize intelligence in addition to quantitative measures such as IQ, and what different factors could contribute to high intelligence. Such factors could include education, environment, personal interests, and more. This dataset includes individuals from the year 1900 to 2000, which offers us the opportunity to explore how different cultures and time periods have cultivated intelligence. We can further explore how historical and cultural factors influenced intelligence and the achievements brought forth by the recorded individuals. Since the dataset includes both male and female individuals, we can further analyze how historical perspectives coupled with educational opportunities offered affected the intelligence/contributions of women compared to men. The dataset further includes the individuals’ country of origin, which can shed light on the educational resources available in each country and how these resources may have impacted the number of highly intelligent individuals it produced or the types of achievements they attained.</p>\n",
+        "\n",
+        "<p>Amongst the above motivations that drive my exploration of this dataset, below are some of the questions that I seek to address:</p>\n",
+        "<ul>\n",
+        "<li>Which fields of expertise do the most intelligent people excel in? Are there certain professions or areas of study that attract high IQ individuals more than others?</li>\n",
+        "<li>How has the recognition and distribution of high intelligence changed over time? Are there historical periods that produced more recognized geniuses?</li>\n",
+        "<li>Is there a correlation between IQ scores and the level of achievement or impact these individuals have had in their respective fields?</li>\n",
+        "<li>What are the demographic patterns amongst the top intelligent people? Are there commonalities in age, gender, nationality, or educational background?</li>\n",
+        "<li>What environmental factors (e.g. socioeconomic status, educational background, cultural influences, etc) are common amongst these individuals? How do these factors influence the development of high intelligence?</li>\n",
+        "</ul>\n",
         "\n",
         "These findings will primarily be revealed in our preliminary analysis.\n"
       ]
@@ -816,8 +815,14 @@
         }
       ],
       "source": [
-        "# df.describe(include='all') # summary info abt categorical data\n",
         "df.describe()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The dataset consists of 5,000 individuals and their names, country of origin, field of expertise, IQ, achievements, birth year, gender, notable works, awards, education, and influence. The dataset contains 5,000 non-null values in every column except for “Awards,” which has 3,751 non-null values. This discrepancy may be due to individuals not having received any awards, or the data could be missing as well. We also need to address the limitations of this dataset when trying to answer our questions. For example, if we are trying to compare individuals’ achievements between genders, we need to take into account the gender distribution. Analysis would be skewed if the dataset contains a disproportionate amount of men and women. Though the dataset’s only numeric columns consist of IQ and Birth Year, we can convert the Gender column by assigning its “Female” and “Male” values, 0 and 1 respectively when conducting further analysis."
       ]
     },
     {
@@ -1491,8 +1496,6 @@
         "id": "Sq1t1KQzw6yU"
       },
       "source": [
-        "The dataset consists of 5,000 individuals and their names, country of origin, field of expertise, IQ, achievements, birth year, gender, notable works, awards, education, and influence. The dataset contains 5,000 non-null values in every column except for “Awards,” which has 3,751 non-null values. This discrepancy may be due to individuals not having received any awards, or the data could be missing as well. We also need to address the limitations of this dataset when trying to answer our questions. For example, if we are trying to compare individuals’ achievements between genders, we need to take into account the gender distribution. Analysis would be skewed if the dataset contains a disproportionate amount of men and women. Though the dataset’s only numeric columns consist of IQ and Birth Year, we can convert the Gender column by assigning its “Female” and “Male” values, 0 and 1 respectively when conducting further analysis. For example, if we were to try to predict the field of expertise based on factors such as IQ, Birth Year, and Gender, we can convert its categorical values to numerical values to better apply an ML algorithm. <br>\n",
-        "<br>\n",
         "Preliminary analysis showed that the IQ values noted of these individuals ranged from 130 to 200, with a mean of 164.75 and a uniform distribution (Figure 1) and the Birth Year ranged from 1900 to 2000. Figure 2 indicates that there is an uniform distribution of individuals recorded per 20 years over the course of a millenia, which may aid in providing more reasonable inferences when analyzing change over time. Figure 3 shows us that there is an even number of women and men present in the data, which allows us to make more accurate comparisons. Further exploratory data analysis indicates a large number of people originating from the United Kingdom in the dataset – 2,235 to be exact – while six other countries make up the remaining records (Figure 4). Figures 5.1 and 5.2 present a similar mean IQ value and mean birth year across different fields of expertise, showing that the average IQ of people was more or less the same across all the fields of study. It’s interesting to note that the Engineering field had the lowest mean birth year, while Biology had the highest mean birth year. This might suggest that intelligent people in Engineering were born in the earlier part of the century, whereas those in Biology were born in the latter part of the century.\n"
       ]
     },
@@ -1506,36 +1509,6 @@
         "\n",
         "---\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 19,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "sEh_SeLoyRwz",
-        "outputId": "86641310-0c93-48bf-cda1-c2d45a0b21d7"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['Father of Computer Science' 'Theory of Evolution' 'Quantum Mechanics'\n",
-            " 'Electromagnetic Induction' 'Wave Equation' 'Quantum Theory'\n",
-            " 'First computer algorithm' 'General Theory of Relativity'\n",
-            " 'Heliocentric Theory' 'Nuclear Reactor' 'AC Electricity, Tesla Coil'\n",
-            " 'Cosmos Series' 'Theory of Relativity' 'Laws of Motion'\n",
-            " 'Quantum Electrodynamics' 'Mona Lisa, The Last Supper, Inventions'\n",
-            " 'Discovery of Radium and Polonium' 'Black Hole Theory'\n",
-            " 'Electromagnetic Theory']\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(df[\"Achievements\"].unique())"
       ]
     },
     {
@@ -1713,36 +1686,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oamk_7lFyRkI",
-        "outputId": "7f05306f-1359-45b9-ff48-6c8b727bdd37"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['E=mc²' 'Bohr Model' 'Cosmos' 'Discovery of Electromagnetic Induction'\n",
-            " 'On Computable Numbers' 'Various Patents'\n",
-            " 'Dialogue Concerning the Two Chief World Systems'\n",
-            " 'Theory of Electromagnetism' 'Research on radioactivity' 'Quantum Theory'\n",
-            " 'On the Origin of Species' 'A Brief History of Time'\n",
-            " 'Philosophiæ Naturalis Principia Mathematica' 'Feynman Lectures'\n",
-            " 'Dirac Equation' 'Penrose Diagram' 'Vitruvian Man' 'Schrödinger Equation'\n",
-            " 'Fermi Paradox' 'Notes on the Analytical Engine']\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(df[\"Notable Works\"].unique())"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 23,
       "metadata": {
         "colab": {
@@ -1888,17 +1831,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
-      "metadata": {
-        "id": "-JpZ2KMWcDys"
-      },
-      "outputs": [],
-      "source": [
-        "# df.loc[df['Notable Works'] == \"E=mc²\"]"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 25,
       "metadata": {
         "colab": {
@@ -1982,18 +1914,6 @@
         "ax.set_xticklabels(labels, rotation=45, fontsize=12)\n",
         "ax.legend(title='Notable Works')\n",
         "plt.show()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 27,
-      "metadata": {
-        "id": "YA0ZhOji2vsK"
-      },
-      "outputs": [],
-      "source": [
-        "# filtered_df = df[(df['Birth Year'] >= 1900) & (df['Birth Year'] < 1920) & (df['Notable Works'] == \"Dirac Equation\")]\n",
-        "# filtered_df"
       ]
     },
     {
